--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,6 +54,6 @@ jobs:
 
       - name: Push changes (consider using pull requests)
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_CICD_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git push origin  HEAD:refs/heads/main --force
