--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,8 +39,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo "Add other actions to build", >> test.yaml
-          echo "test, and deploy your project". >> test.yaml
+          echo "Add other actions to build." >> test.yaml
+          echo "test, and deploy your project." >> test.yaml
 
       - name: Add and commit changes (if any)
         run: |
@@ -54,7 +54,7 @@ jobs:
 
       - name: Push changes (consider using pull requests)
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           #Pushing
           git push origin  HEAD:refs/heads/main --force
