--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,5 +65,5 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          #Pushing the code
+          #Pushing the code test
           git push origin  HEAD:refs/heads/main --force
